Correction du problème de l'overflow

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
 
 .contenaire{
 	background-color: rgba(210,147,93,.5);
-	width: 80%;
+	width: 90%;
 	margin: 0 auto;
 	border-radius: 10px;
 	padding-bottom: 10px;
